# stock-link-parser

./: .env  .gitignore  pyproject.toml  requirements.txt
app/: all_insert.local.py  all_insert.py  all_insert_local.py  insert_month.py  latest_insert.py  main.local.py  main.py  main_local.py  patch_summaries.py  post_summaries.py  today_insert.py  today_insert_local.py
app/api/: .env  Insert.py  __init__.py  api_url.json  endpoints.py  insert.py
app/api/ix/: __init__.py  exceptions.py  insert.py  settings.py
app/api/jpx/: __init__.py  insert.py
app/api/wiki/: insert.py
app/constants/: report_categories.py
app/exception/: xbrl_parser_exception.py
app/ix_manager/: base_xbrl_manager.py  ixbrl_manager.py  label_manager.py  link_manager.py  qualitative_manager.py  schema_manager.py
app/ix_models/: base_xbrl_model.py  xbrl_model.py
app/ix_parser/: base_xbrl_parser.py  ixbrl_parser.py  label_parser.py  link_parser.py  qualitative_parser.py  schema_parser.py
app/ix_tag/: __init__.py  base.py  ixbrl.py  label.py  link.py  qualitative.py  schema.py
app/jpx_script/: README.md  __init__.py  stock_info.py
app/stock_info_api/: test.py  wiki_reader.py
app/tests/: conftest.py
app/tests/model/: test_xbrl_model.py
output/taxonomy/jp/tse/tdnet/ed/t/2014-01-12/: tse-ed-t-2014-01-12-lab.xml
