[tool.poetry]
name = "PyXBRLTools"
version = "1.1.18"
description = "timery disclosure download API"
authors = ["kent <kent2980@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
requests = "^2.32.3"
tqdm = "^4.66.6"
lxml = "^5.3.0"
jaconv = "^0.4.0"
pymysql = "^1.1.1"
datetimejp = "^1.1.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
wikipedia = "^1.4.0"
pyshorteners = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 75
